<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentRight">

    <TextView
        android:id="@+id/textPersonalInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/personal_info"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textPreferredColor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginTop="80dp"
        android:text="@string/preferred_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textPersonalInfo" />

    <TextView
        android:id="@+id/textColor"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginEnd="100dp"
        android:gravity="center"
        android:text="@string/color"
        android:textAlignment="center"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="@+id/textPreferredColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textPreferredColor" />

    <TextView
        android:id="@+id/textBirthDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/birth_date"
        app:layout_constraintStart_toStartOf="@+id/textPreferredColor"
        app:layout_constraintEnd_toEndOf="@+id/textPreferredColor"
        app:layout_constraintTop_toBottomOf="@+id/textPreferredColor" />

    <TextView
        android:id="@+id/textDate"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:gravity="center"
        android:hint="@string/date_hint"
        android:textAlignment="center"
        android:background="@color/light_blue"
        app:layout_constraintStart_toStartOf="@+id/textColor"
        app:layout_constraintEnd_toEndOf="@+id/textColor"
        app:layout_constraintTop_toTopOf="@+id/textBirthDate"
        app:layout_constraintBottom_toBottomOf="@+id/textBirthDate"/>

    <!--<Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textPersonalInfo"
        app:layout_constraintStart_toStartOf="@+id/textPersonalInfo" />
-->
</androidx.constraintlayout.widget.ConstraintLayout>