<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentLeft">

    <Button
        android:id="@+id/buttonFontSize"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:text="@string/font_size"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonFontStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/font_style"
        app:layout_constraintTop_toBottomOf="@+id/buttonFontSize"
        app:layout_constraintStart_toStartOf="@+id/buttonFontSize"
        app:layout_constraintEnd_toEndOf="@+id/buttonFontSize" />

    <TextView
        android:id="@+id/textExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:text="@string/some_text"
        app:layout_constraintEnd_toEndOf="@+id/buttonFontStyle"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="@+id/buttonFontStyle"
        app:layout_constraintTop_toBottomOf="@+id/buttonFontStyle" />

    <Button
        android:id="@+id/buttonExtra"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/extra"
        app:layout_constraintEnd_toEndOf="@+id/textExtra"
        app:layout_constraintStart_toStartOf="@+id/textExtra"
        app:layout_constraintTop_toBottomOf="@+id/textExtra" />

   <!-- <Button
        android:id="@+id/buttonBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/buttonFontStyle"
        app:layout_constraintStart_toStartOf="@+id/buttonFontStyle" />
-->
</androidx.constraintlayout.widget.ConstraintLayout>