<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/fragmentCenter">

    <fragment
        android:id="@+id/fragmentLeft"
        android:name="com.example.labthreeapp.FragmentLeft"
        android:label="@string/left_fragment"
        tools:layout="@layout/fragment_left">
        <action
            android:id="@+id/action_fragmentLeft_to_fragmentExtra"
            app:destination="@id/fragmentExtra"
            app:enterAnim="@android:anim/slide_in_left"
            app:exitAnim="@android:anim/slide_out_right"
            app:popEnterAnim="@android:anim/slide_in_left"
            app:popExitAnim="@android:anim/slide_out_right"
            app:launchSingleTop="true"
            app:popUpTo="@id/fragmentRight" />
    </fragment>
    <fragment
        android:id="@+id/fragmentCenter"
        android:name="com.example.labthreeapp.FragmentCenter"
        android:label="@string/center_fragment"
        tools:layout="@layout/fragment_center" />
    <fragment
        android:id="@+id/fragmentRight"
        android:name="com.example.labthreeapp.FragmentRight"
        android:label="@string/right_fragment"
        tools:layout="@layout/fragment_right"/>

    <action
        android:id="@+id/action_global_to_fragmentLeft"
        app:destination="@id/fragmentLeft"
        app:launchSingleTop="true"
        app:popUpTo="@id/fragmentCenter" />
    <action
        android:id="@+id/action_global_to_fragmentCenter"
        app:destination="@id/fragmentCenter"
        app:launchSingleTop="true"
        app:popUpTo="@id/fragmentCenter" />
    <action
        android:id="@+id/action_global_to_fragmentRight"
        app:destination="@id/fragmentRight"
        app:launchSingleTop="true"
        app:popUpTo="@id/fragmentCenter" />
    <fragment
        android:id="@+id/fragmentExtra"
        android:name="com.example.labthreeapp.FragmentExtra"
        android:label="Extra Fragment"
        tools:layout="@layout/fragment_extra" />


</navigation>